--- a/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
@@ -50,6 +50,10 @@
 .dz-image {
 	border-radius: 4px;
 	overflow: hidden;
+
+	img {
+		display: block;
+	}
 }
 
 .dropzone .dz-preview.dz-file-preview .dz-image {
