--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -934,15 +934,21 @@ body.post-type-bp-email .categorydiv label {
   max-width: 1050px;
 }
 
+.bp-help-card-grid .bp-help-main-menu-wrap {
+  display: flex;
+  flex-flow: wrap;
+  margin-left: -10px;
+  margin-right: -10px;
+}
+
 .bp-help-card-grid .bp-help-card {
-  float: left;
-  margin-bottom: 2%;
+  margin: 0 10px 2%;
   background-color: #fff;
   border: 1px solid #e5e5e5;
   border-radius: 6px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   box-sizing: border-box;
-  min-height: 195px;
+  flex: 0 0 calc(33.33% - 20px);
 }
 
 .bp-help-card-grid .bp-help-card .inside {
@@ -1025,6 +1031,10 @@ body.post-type-bp-email .categorydiv label {
   transform: rotate(90deg);
 }
 
+.bp-help-content p, .bp-help-content ul li {
+  line-height: 2;
+}
+
 .bp-help-content ul.bp-help-menu {
   margin: 0 0 2.5em;
 }
@@ -1068,7 +1078,7 @@ body.post-type-bp-email .categorydiv label {
 }
 
 .bp-help-content ul li {
-  list-style-type: disc;
+  list-style-type: circle;
 }
 
 .bp-help-content ol li {
@@ -1089,15 +1099,10 @@ body.post-type-bp-email .categorydiv label {
 }
 
 @media screen and (min-width: 782px) {
-  .bp-help-card-grid .bp-help-card {
-    margin-right: 2%;
-    width: 32%;
-  }
-  .bp-help-card-grid .bp-help-card:nth-child(3n) {
-    margin-right: 0;
-  }
-  .bp-help-card-grid .bp-help-card:nth-child(3n+1) {
-    clear: both;
+  .bp-help-card-grid {
+    /*.bp-help-card {
+			flex: 0 0 calc(50% - 20px);
+		}*/
   }
   .bp-help-sidebar {
     background: #f9f9f9;
@@ -1121,14 +1126,7 @@ body.post-type-bp-email .categorydiv label {
 
 @media screen and (max-width: 781px) {
   .bp-help-card-grid .bp-help-card {
-    margin-right: 2%;
-    width: 49%;
-  }
-  .bp-help-card-grid .bp-help-card:nth-child(2n) {
-    margin-right: 0;
-  }
-  .bp-help-card-grid .bp-help-card:nth-child(2n+1) {
-    clear: both;
+    flex: 0 0 calc(50% - 20px);
   }
   .bp-help-sidebar {
     background: #f9f9f9;
@@ -1146,7 +1144,7 @@ body.post-type-bp-email .categorydiv label {
 
 @media screen and (max-width: 550px) {
   .bp-help-card-grid .bp-help-card {
-    width: 100%;
+    flex: 0 0 calc(100% - 20px);
   }
 }
 
