--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -756,7 +756,6 @@ body.buddypress article.page > .entry-header .entry-title {
   .buddypress-wrap .subnav-filters .bp-search,
   .buddypress-wrap .subnav-filters .dir-search,
   .buddypress-wrap .subnav-filters .user-messages-bulk-actions,
-  .buddypress-wrap .subnav-filters .user-messages-search,
   .buddypress-wrap .subnav-filters .group-invites-search,
   .buddypress-wrap .subnav-filters .group-act-search {
     float: left;
@@ -771,9 +770,6 @@ body.buddypress article.page > .entry-header .entry-title {
   .buddypress-wrap .subnav-filters .last select,
   .buddypress-wrap .subnav-filters .component-filters select {
     max-width: 250px;
-  }
-  .buddypress-wrap .subnav-filters .user-messages-search {
-    float: right;
   }
 }
 
@@ -2755,6 +2751,7 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 #item-header-cover-image #item-header-avatar {
+  margin-top: -70px;
   padding: 0 1em;
   position: relative;
 }
@@ -3761,12 +3758,15 @@ body.register .buddypress-wrap .page ul {
 }
 
 #message-threads li .thread-date {
-  padding-right: 5px;
+  color: #767676;
+  font-size: 13px;
+  padding-left: 5px;
   text-align: right;
 }
 
 #message-threads li .thread-avatar {
   margin-right: 15px;
+  max-width: 60px;
   -webkit-flex: 1 2 10%;
   -moz-flex: 1 2 10%;
   -ms-flex: 1 2 10%;
@@ -3857,7 +3857,7 @@ body.register .buddypress-wrap .page ul {
   font-size: 16px;
 }
 
-.bp-messages-content #bp-message-thread-list .message-content {
+.bp-messages-content #bp-message-thread-list .bp-message-content-wrap {
   font-size: 14px;
   clear: both;
   overflow: hidden;
@@ -3865,7 +3865,7 @@ body.register .buddypress-wrap .page ul {
   padding-left: 40px;
 }
 
-.bp-messages-content #bp-message-thread-list .message-content p {
+.bp-messages-content #bp-message-thread-list .bp-message-content-wrap p {
   margin-bottom: 8px;
 }
 
@@ -4043,6 +4043,13 @@ input#send-to-input {
   min-width: 0;
 }
 
+@media screen and (max-width: 46.8em) {
+  .bp-messages-nav-panel {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+  }
+}
+
 .messages-wrapper #subnav #compose-personal-li {
   margin-left: auto;
 }
@@ -4076,11 +4083,34 @@ input#send-to-input {
   text-align: center;
 }
 
+.no-message-content {
+  padding: 20px;
+}
+
 .no-message-wrap .dashicons {
   font-size: 30px;
   width: auto;
   height: auto;
   margin-bottom: 5px;
+}
+
+.bp-search.messages-search,
+#user_messages_search_form {
+  width: 100%;
+}
+
+.bp-user-messages-loading.loading {
+  border: 0;
+  padding: 15px;
+  text-align: center;
+}
+
+@media screen and (min-width: 46.8em) {
+  .bp-messages-user-threads,
+  #bp-message-thread-list {
+    max-height: 60vh;
+    overflow: auto;
+  }
 }
 
 /**
