--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1198,21 +1198,6 @@ a.layout-grid-view {
   /* For Firefox */
 }
 
-.activity-update-form #whats-new-textarea [contenteditable="true"] img.emojioneemoji {
-  width: 1.2em;
-  position: relative;
-}
-
-.activity-update-form #whats-new-textarea [contenteditable="true"] img.emojioneemoji:after {
-  content: ">";
-  display: block;
-  width: 1rem;
-  height: 1rem;
-  position: absolute;
-  bottom: 0;
-  left: -1.5rem;
-}
-
 .activity-update-form #activity-form-submit-wrapper {
   border-top: 1px solid #ddd;
   display: flex;
@@ -2118,20 +2103,20 @@ form.ac-form .ac-reply-content .ac-textarea {
   padding: 0 0.7em;
 }
 
-form.ac-form .ac-reply-content .ac-textarea textarea {
+form.ac-form .ac-reply-content .ac-textarea .ac-input[contenteditable="true"] {
   background: transparent;
   box-shadow: none;
   color: #555;
   font-family: inherit;
   font-size: 100%;
-  height: 60px;
   margin: 0;
   outline: none;
   padding: 0.5em;
   width: 100%;
+  border: 1px solid #ccc;
 }
 
-form.ac-form .ac-reply-content .ac-textarea textarea:focus {
+form.ac-form .ac-reply-content .ac-textarea .ac-input[contenteditable="true"]:focus {
   -webkit-box-shadow: 0 0 6px #d6d6d6;
   -moz-box-shadow: 0 0 6px #d6d6d6;
   box-shadow: 0 0 6px #d6d6d6;
@@ -4788,6 +4773,21 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   overflow: visible;
   position: static;
   top: 0;
+}
+
+.emojionearea .emojionearea-wrapper img.emojioneemoji {
+  width: 1.2em;
+  position: relative;
+}
+
+.emojionearea .emojionearea-wrapper img.emojioneemoji:after {
+  content: ">";
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: -1.5rem;
 }
 
 .buddypress .buddypress-wrap button,
@@ -10497,7 +10497,8 @@ div.emojionearea.emojionearea-standalone .emojionearea-button > div {
   top: 38%;
 }
 
-.dz-success-mark svg {
+.dz-success-mark svg,
+.dz-error-mark svg {
   max-width: 20px;
   height: auto;
   margin: -10px 10px 0 0;
@@ -10505,6 +10506,10 @@ div.emojionearea.emojionearea-standalone .emojionearea-button > div {
 
 .dz-success-mark svg path {
   fill: #1cd991;
+}
+
+.dz-error-mark svg path {
+  fill: #ef3e46;
 }
 
 .dz-error-mark i {
