--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -934,18 +934,25 @@ body.post-type-bp-email .categorydiv label {
   max-width: 1050px;
 }
 
+.bp-help-card-grid .bp-help-main-menu-wrap {
+  display: flex;
+  flex-flow: wrap;
+  margin-right: -10px;
+  margin-left: -10px;
+}
+
 .bp-help-card-grid .bp-help-card {
-  float: right;
-  margin-bottom: 2%;
+  margin: 0 10px 2%;
   background-color: #fff;
   border: 1px solid #e5e5e5;
   border-radius: 6px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   box-sizing: border-box;
+  flex: 0 0 calc(33.33% - 20px);
 }
 
 .bp-help-card-grid .bp-help-card .inside {
-  padding: 1.8em 2em 1em;
+  padding: 1.8em 2em 1.8em;
   min-height: 60px;
 }
 
@@ -996,13 +1003,36 @@ body.post-type-bp-email .categorydiv label {
   margin: 1.2em 0;
 }
 
-.bp-help-sidebar > ul > li > ul > li.selected a {
+.bp-help-sidebar > ul > li ul > li.selected > a {
   font-weight: 600;
 }
 
 .bp-help-sidebar > ul > li > ul > li > ul > li {
   margin-right: 1.6em;
   list-style-type: disc;
+}
+
+.bp-help-sidebar > ul span.open {
+  font-size: 0;
+}
+
+.bp-help-sidebar > ul span.open:after {
+  font-family: dashicons;
+  content: "\f345";
+  margin: 0 5px;
+  display: inline-block;
+  vertical-align: bottom;
+  font-size: 10px;
+  color: #999;
+  cursor: pointer;
+}
+
+.bp-help-sidebar > ul span.open.active:after {
+  transform: rotate(-90deg);
+}
+
+.bp-help-content p, .bp-help-content ul li {
+  line-height: 2;
 }
 
 .bp-help-content ul.bp-help-menu {
@@ -1048,7 +1078,7 @@ body.post-type-bp-email .categorydiv label {
 }
 
 .bp-help-content ul li {
-  list-style-type: disc;
+  list-style-type: circle;
 }
 
 .bp-help-content ol li {
@@ -1069,15 +1099,10 @@ body.post-type-bp-email .categorydiv label {
 }
 
 @media screen and (min-width: 782px) {
-  .bp-help-card-grid .bp-help-card {
-    margin-left: 2%;
-    width: 32%;
-  }
-  .bp-help-card-grid .bp-help-card:nth-child(3n) {
-    margin-left: 0;
-  }
-  .bp-help-card-grid .bp-help-card:nth-child(3n+1) {
-    clear: both;
+  .bp-help-card-grid {
+    /*.bp-help-card {
+			flex: 0 0 calc(50% - 20px);
+		}*/
   }
   .bp-help-sidebar {
     background: #f9f9f9;
@@ -1101,14 +1126,7 @@ body.post-type-bp-email .categorydiv label {
 
 @media screen and (max-width: 781px) {
   .bp-help-card-grid .bp-help-card {
-    margin-left: 2%;
-    width: 49%;
-  }
-  .bp-help-card-grid .bp-help-card:nth-child(2n) {
-    margin-left: 0;
-  }
-  .bp-help-card-grid .bp-help-card:nth-child(2n+1) {
-    clear: both;
+    flex: 0 0 calc(50% - 20px);
   }
   .bp-help-sidebar {
     background: #f9f9f9;
@@ -1126,7 +1144,7 @@ body.post-type-bp-email .categorydiv label {
 
 @media screen and (max-width: 550px) {
   .bp-help-card-grid .bp-help-card {
-    width: 100%;
+    flex: 0 0 calc(100% - 20px);
   }
 }
 
