--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -56,13 +56,9 @@
 
 // The actual messages list
 #message-threads {
-	border-top: 1px solid $light-grey;
 	clear: both;
 	list-style: none;
 	margin: 0;
-	//max-height: 220px;
-	//overflow-x: hidden;
-	//overflow-y: auto;
 	padding: 0;
 	width: 100%;
 
@@ -71,8 +67,7 @@
 	}
 
 	// The primary list elements
-	li {
-		border-bottom: 1px solid $light-grey;
+	.bp-message-link {
 
 		@include flex-box-dir();
 		margin: 0;
@@ -91,8 +86,7 @@
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: ellipsis;
-
-			@include box-item-size(1, 2, 10%);
+			width: 100%;
 
 			img.avatar {
 				float: left;
@@ -146,12 +140,6 @@
 
 				@include font-size(12);
 				margin: 0;
-			}
-
-			.thread-from,
-			.thread-to {
-
-				@include responsive-font(16);
 			}
 
 			.thread-subject {
@@ -209,101 +197,6 @@
 			}
 		}
 	}
-
-	// The single view of messages in a conversation thread
-	#bp-message-thread-list {
-		background: #fafafa;
-		border-top: 1px solid $light-grey;
-		clear: both;
-		list-style: none;
-		padding: 0 $pad-med;
-
-		&:after {
-			content: " ";
-			clear: both;
-			display: table;
-		}
-
-		li {
-			background: $white;
-			border: 1px solid $bp-border-dark;
-
-			@include box-shadow(-2px 1px 9px 0 #eee);
-			padding: $pad-sml;
-			margin: 1em 0;
-			width: 100%;
-		}
-
-		.message-metadata {
-
-			.avatar {
-				width: 30px;
-			}
-
-			.user-link {
-
-				@include font-size(12);
-				display: inline-block;
-				color: $meta-text-dark;
-
-				strong {
-
-					@include font-size(16);
-					font-weight: 600;
-				}
-
-				strong:after {
-					content: "\00b7";
-					color: $light-text;
-					font-size: 20px;
-					margin-left: 6px;
-					vertical-align: middle;
-					display: inline-block;
-				}
-			}
-
-			time {
-				color: $light-text;
-
-				@include font-size(14);
-				padding: 0 2px;
-			}
-
-			button {
-				padding: 0 $pad-xsml;
-			}
-
-			button:before {
-
-				@include font-size(16);
-			}
-		}
-
-		.bp-message-content-wrap {
-
-			@include font-size(14);
-			clear: both;
-			overflow: hidden;
-			margin: 0 auto;
-			padding-left: 40px;
-
-			p {
-				margin-bottom: 8px;
-			}
-		}
-
-		img.avatar {
-			float: left;
-			margin: 0 $marg-sml 0 0;
-		}
-
-		.actions {
-
-			a:before {
-				font-size: 18px;
-			}
-		}
-	} // close #bp-message-thread-list
 
 	form.send-reply {
 
@@ -389,6 +282,100 @@
 	}
 
 } // close .bp-messages-content
+
+// The single view of messages in a conversation thread
+#bp-message-thread-list {
+	background: #fafafa;
+	border-top: 1px solid $light-grey;
+	clear: both;
+	list-style: none;
+	padding: 0 $pad-med;
+
+	&:after {
+		content: " ";
+		clear: both;
+		display: table;
+	}
+
+	li {
+		background: $white;
+		border: 1px solid $bp-border-dark;
+
+		@include box-shadow(-2px 1px 9px 0 #eee);
+		padding: $pad-sml;
+		margin: 1em 0;
+		width: 100%;
+	}
+
+	.message-metadata {
+
+		.avatar {
+			width: 30px;
+		}
+
+		.user-link {
+
+			@include font-size(12);
+			display: inline-block;
+			color: $meta-text-dark;
+
+			strong {
+
+				@include font-size(16);
+				font-weight: 600;
+			}
+
+			strong:after {
+				content: "\00b7";
+				color: $light-text;
+				font-size: 20px;
+				margin-left: 6px;
+				vertical-align: middle;
+				display: inline-block;
+			}
+		}
+
+		time {
+			color: $light-text;
+
+			@include font-size(14);
+			padding: 0 2px;
+		}
+
+		button {
+			padding: 0 $pad-xsml;
+		}
+
+		button:before {
+
+			@include font-size(16);
+		}
+	}
+
+	.bp-message-content-wrap {
+
+		@include font-size(14);
+		clear: both;
+		overflow: hidden;
+		margin: 0 auto;
+
+		p {
+			margin-bottom: 8px;
+		}
+	}
+
+	img.avatar {
+		float: left;
+		margin: 0 $marg-sml 0 0;
+	}
+
+	.actions {
+
+		a:before {
+			font-size: 18px;
+		}
+	}
+} // close #bp-message-thread-list
 
 // Bulk Message styles
 
@@ -551,6 +538,26 @@ input#send-to-input {
 	border: 0;
 	padding: 15px;
 	text-align: center;
+}
+
+.bp-single-message-wrap {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.bp-avatar-wrap {
+	-webkit-box-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
+	max-width: 40px;
+	margin-right: 10px;
+}
+
+.bp-single-message-content {
+	-webkit-box-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
 }
 
 @include medium-up() {
