--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -558,17 +558,48 @@ input#send-to-input {
 	-webkit-box-flex: 1;
 	-ms-flex: 1;
 	flex: 1;
+
+	.bb-activity-media-elem {
+		min-width: 20%;
+	}
+}
+
+.bp-messages-content-wrapper {
+	position: relative;
+
+	#messages-post-media-uploader.open {
+		position: absolute;
+		top: 0;
+		background: rgba(255, 255, 255, 0.92);
+		height: calc(100% - 245px);
+		width: 100%;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		align-items: center;
+		-ms-flex-line-pack: center;
+		align-content: center;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		justify-content: center;
+		left: 0;
+		border-radius: 4px;
+		padding: 20px;
+		overflow: auto;
+	}
 }
 
 @include medium-up() {
 
-	.bp-messages-user-threads,
-	#bp-message-thread-list {
-		max-height: 66vh;
+	.bp-messages-user-threads {
+		max-height: 80vh;
 		overflow: auto;
 	}
 
 	#bp-message-thread-list {
 		max-height: 50vh;
+		overflow: auto;
 	}
 }
