--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3930,24 +3930,38 @@ input#send-to-input {
   margin-top: 0;
 }
 
+#bp-message-load-more:not(.loading),
+#bp-messages-next-page,
+#bp-messages-prev-page {
+  display: none !important;
+}
+
 #bp-message-load-more {
-  margin: 15px 0;
+  background: rgba(255, 255, 255, 0.7);
+  position: absolute;
+  top: 60px;
+  text-align: center;
+  width: 100%;
+  left: 0;
+  padding: 20px 0;
+  margin: 6px 0 0;
 }
 
 #bp-message-load-more .button {
-  background: #fafafa;
-  border: 1px solid #eee;
-  display: block;
-  font-size: 110%;
-  margin: 15px 0;
-  padding: 10px 0;
-  text-align: center;
-  width: 100%;
+  font-size: 0;
+  padding: 0;
+  margin: auto;
+  width: auto;
+  color: inherit;
+  background-color: transparent;
+  border: 0;
 }
 
-#bp-message-load-more .button:hover {
-  background: #fff;
-  color: #333;
+#bp-message-load-more .button:hover, #bp-message-load-more .button:focus {
+  outline: none;
+  text-decoration: none;
+  color: inherit;
+  box-shadow: none;
 }
 
 #send_message_form .select2-selection--multiple {
@@ -4041,7 +4055,7 @@ input#send-to-input {
 }
 
 .no-message-wrap {
-  padding: 30px 0 15px;
+  padding: 70px 0 20px;
   text-align: center;
 }
 
