Code cleanup and navigation fixes

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -324,6 +324,10 @@ body.register .buddypress-wrap .page ul {
 	}
 }
 
+.item-body .bp-widget {
+	margin-bottom: 20px;
+}
+
 @media screen and (max-width: 782px) {
 
 	.member-header-actions.action {
