--- a/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
@@ -378,15 +378,21 @@
 
 	.bp-single-vert-nav { // described for the #buddypress element
 
+		.bp-wrap {
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+		}
+
 		.bp-navs.vertical {
+			border-right: 1px solid $med-light-grey;
+			border-bottom: 0;
+			float: left;
+			width: 25%;
 			overflow: visible;
 
 			ul {
-				border-right: 1px solid $med-light-grey;
-				border-bottom: 0;
-				float: left;
-				margin-right: -1px;
-				width: 25%;
+				margin: 0;
 			}
 
 			li {
@@ -414,84 +420,53 @@
 					border-color: $light-grey;
 				}
 			} // li
-
 		}
 
-		.bp-navs.vertical.tabbed-links {
+		.item-body {
+			-webkit-box-flex: 1;
+			-ms-flex: 1;
+			flex: 1;
 
-			li.selected {
+			padding-left: 20px;
+		}
+
+		#subnav {
+			background: $light-grey;
+			margin: 0;
+			width: auto;
+
+			li {
+
+				@include font-size(16);
+				margin: $marg-sml 0;
 
 				a {
-					padding-left: 0;
-				}
-			}
-		}
-
-		// re-factor the related elements like the #item-body so it sits
-		// to the side(floated)
-		.bp-wrap {
-			margin-bottom: $marg-med;
-
-			.user-nav-tabs.users-nav,
-			.group-nav-tabs.groups-nav {
-
-				ul {
-
-					li {
-						left: 1px;
-						position: relative;
-					}
-				}
-			}
-		}
-
-		.item-body:not(#group-create-body) {
-			background: #fff;
-			border-left: 1px solid $med-light-grey;
-			float: right;
-			margin: 0;
-			min-height: 400px;
-			padding: 0 0 0 $pad-med;
-			width: calc(75% + 1px);
-
-			#subnav:not(.tabbed-links) {
-				background: $light-grey;
-				margin: 0;
-				width: auto;
-
-				li {
-
-					@include font-size(16);
-					margin: $marg-sml 0;
-
-					a {
 						border-right: 1px solid $bp-border-dark;
 						padding: 0 $pad-sml;
-					}
-
-					a:focus,
-					a:hover {
-						background: none;
-					}
 				}
 
-				li.current {
+				a:focus,
+				a:hover {
+						background: none;
+				}
+			}
+
+			li.current {
 
 					a {
-						background: none;
-						color: $black;
+							background: none;
+							color: $black;
 					}
-				}
+			}
 
-				li:last-child {
+			li:last-child {
 
 					a {
-						border: none;
+							border: none;
 					}
-				}
+			}
 
-			} // close #subnav
-		}
+		} // close #subnav
 	}
 
 	// Set the directory screens main navs as vertical aligned
@@ -552,28 +527,6 @@
 
 			.subnav-filters {
 				margin-top: 0;
-			}
-		}
-	}
-
-	// Style main navs as visual tabs effect
-	// if user selects options in the Customizer
-	// and classes are set.
-	// N.B This is in addition to the  standalone visual tab style classes/mixin
-	// provided so any elements may be styled to represent tabs.
-
-	.buddypress-wrap {
-
-		&.bp-vertical-navs {
-
-			.dir-navs.activity-nav-tabs,
-			.dir-navs.sites-nav-tabs,
-			.dir-navs.groups-nav-tabs,
-			.dir-navs.members-nav-tabs,
-			.main-navs.user-nav-tabs,
-			.main-navs.group-nav-tabs {
-
-				@include primary-navs-vert-tabs();
 			}
 		}
 	}
