--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -521,96 +521,6 @@ body.buddypress article.page > .entry-header .entry-title {
   }
 }
 
-@media screen and (min-width: 46.8em) {
-  .buddypress-wrap .tabbed-links ul,
-  .buddypress-wrap .tabbed-links ol {
-    border-bottom: 1px solid #ccc;
-    float: none;
-    margin: 20px 0 10px;
-  }
-  .buddypress-wrap .tabbed-links ul:before, .buddypress-wrap .tabbed-links ul:after,
-  .buddypress-wrap .tabbed-links ol:before,
-  .buddypress-wrap .tabbed-links ol:after {
-    content: " ";
-    display: block;
-  }
-  .buddypress-wrap .tabbed-links ul:after,
-  .buddypress-wrap .tabbed-links ol:after {
-    clear: both;
-  }
-  .buddypress-wrap .tabbed-links ul li,
-  .buddypress-wrap .tabbed-links ol li {
-    float: left;
-    list-style: none;
-    margin: 0 10px 0 0;
-  }
-  .buddypress-wrap .tabbed-links ul li a,
-  .buddypress-wrap .tabbed-links ul li span:not(.count),
-  .buddypress-wrap .tabbed-links ol li a,
-  .buddypress-wrap .tabbed-links ol li span:not(.count) {
-    background: none;
-    border: none;
-    display: block;
-    padding: 4px 10px;
-  }
-  .buddypress-wrap .tabbed-links ul li a:focus,
-  .buddypress-wrap .tabbed-links ul li a:hover,
-  .buddypress-wrap .tabbed-links ol li a:focus,
-  .buddypress-wrap .tabbed-links ol li a:hover {
-    background: none;
-  }
-  .buddypress-wrap .tabbed-links ul li:not(.current),
-  .buddypress-wrap .tabbed-links ol li:not(.current) {
-    margin-bottom: 2px;
-  }
-  .buddypress-wrap .tabbed-links ul li.current,
-  .buddypress-wrap .tabbed-links ol li.current {
-    border-color: #ccc #ccc #fff;
-    border-style: solid;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-width: 1px;
-    margin-bottom: -1px;
-    padding: 0 0.7em 1px;
-  }
-  .buddypress-wrap .tabbed-links ul li.current a,
-  .buddypress-wrap .tabbed-links ol li.current a {
-    background: none;
-    color: #333;
-  }
-  .buddypress-wrap .bp-subnavs.tabbed-links > ul {
-    margin-top: 0;
-  }
-  .buddypress-wrap .bp-navs.tabbed-links {
-    background: none;
-    margin-top: 2px;
-  }
-  .buddypress-wrap .bp-navs.tabbed-links ul li a {
-    border-right: 0;
-    font-size: inherit;
-  }
-  .buddypress-wrap .bp-navs.tabbed-links ul li.last {
-    float: right;
-    margin: 0;
-  }
-  .buddypress-wrap .bp-navs.tabbed-links ul li.last a {
-    margin-top: -0.5em;
-  }
-  .buddypress-wrap .bp-navs.tabbed-links ul li a,
-  .buddypress-wrap .bp-navs.tabbed-links ul li a:focus,
-  .buddypress-wrap .bp-navs.tabbed-links ul li a:hover,
-  .buddypress-wrap .bp-navs.tabbed-links ul li.current a,
-  .buddypress-wrap .bp-navs.tabbed-links ul li.current a:focus,
-  .buddypress-wrap .bp-navs.tabbed-links ul li.current a:hover {
-    background: none;
-    border: 0;
-  }
-  .buddypress-wrap .bp-navs.tabbed-links ul li a:active,
-  .buddypress-wrap .bp-navs.tabbed-links ul li.current a:active {
-    outline: none;
-  }
-}
-
 .buddypress-wrap .dir-component-filters .filter label {
   display: inline;
 }
@@ -2921,10 +2831,6 @@ body.buddypress.bp-user #page #primary .entry-header {
 * @subsection 5.2 - Item Body: Global
 *-----------------------------------------------------------
 */
-.buddypress-wrap .item-body {
-  margin: 20px 0;
-}
-
 .buddypress-wrap .item-body .screen-heading {
   font-size: 20px;
   font-weight: 400;
@@ -3537,6 +3443,10 @@ body.register .buddypress-wrap .page ul {
 .social-networks-wrap svg {
   width: 100%;
   vertical-align: middle;
+}
+
+.item-body .bp-widget {
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 782px) {
@@ -6845,15 +6755,20 @@ button[data-bp-close]:hover {
 }
 
 @media screen and (min-width: 46.8em) {
-  .bp-single-vert-nav .bp-navs.vertical {
-    overflow: visible;
+  .bp-single-vert-nav .bp-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
-  .bp-single-vert-nav .bp-navs.vertical ul {
+  .bp-single-vert-nav .bp-navs.vertical {
     border-right: 1px solid #d6d6d6;
     border-bottom: 0;
     float: left;
-    margin-right: -1px;
     width: 25%;
+    overflow: visible;
+  }
+  .bp-single-vert-nav .bp-navs.vertical ul {
+    margin: 0;
   }
   .bp-single-vert-nav .bp-navs.vertical li {
     float: none;
@@ -6875,48 +6790,34 @@ button[data-bp-close]:hover {
   .bp-single-vert-nav .bp-navs.vertical li:hover span {
     border-color: #eaeaea;
   }
-  .bp-single-vert-nav .bp-navs.vertical.tabbed-links li.selected a {
-    padding-left: 0;
+  .bp-single-vert-nav .item-body {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    padding-left: 20px;
   }
-  .bp-single-vert-nav .bp-wrap {
-    margin-bottom: 15px;
-  }
-  .bp-single-vert-nav .bp-wrap .user-nav-tabs.users-nav ul li,
-  .bp-single-vert-nav .bp-wrap .group-nav-tabs.groups-nav ul li {
-    left: 1px;
-    position: relative;
-  }
-  .bp-single-vert-nav .item-body:not(#group-create-body) {
-    background: #fff;
-    border-left: 1px solid #d6d6d6;
-    float: right;
-    margin: 0;
-    min-height: 400px;
-    padding: 0 0 0 1em;
-    width: calc(75% + 1px);
-  }
-  .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) {
+  .bp-single-vert-nav #subnav {
     background: #eaeaea;
     margin: 0;
     width: auto;
   }
-  .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li {
+  .bp-single-vert-nav #subnav li {
     font-size: 16px;
     margin: 10px 0;
   }
-  .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li a {
+  .bp-single-vert-nav #subnav li a {
     border-right: 1px solid #ccc;
     padding: 0 0.7em;
   }
-  .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li a:focus,
-  .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li a:hover {
+  .bp-single-vert-nav #subnav li a:focus,
+  .bp-single-vert-nav #subnav li a:hover {
     background: none;
   }
-  .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li.current a {
+  .bp-single-vert-nav #subnav li.current a {
     background: none;
     color: #333;
   }
-  .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li:last-child a {
+  .bp-single-vert-nav #subnav li:last-child a {
     border: none;
   }
   .bp-dir-vert-nav .dir-navs {
@@ -6959,50 +6860,6 @@ button[data-bp-close]:hover {
   }
   .bp-dir-vert-nav .screen-content .subnav-filters {
     margin-top: 0;
-  }
-  .buddypress-wrap.bp-vertical-navs .dir-navs.activity-nav-tabs ul li:not(.selected) a:hover,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.activity-nav-tabs ul li:not(.selected) a:focus,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.sites-nav-tabs ul li:not(.selected) a:hover,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.sites-nav-tabs ul li:not(.selected) a:focus,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.groups-nav-tabs ul li:not(.selected) a:hover,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.groups-nav-tabs ul li:not(.selected) a:focus,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.members-nav-tabs ul li:not(.selected) a:hover,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.members-nav-tabs ul li:not(.selected) a:focus,
-  .buddypress-wrap.bp-vertical-navs .main-navs.user-nav-tabs ul li:not(.selected) a:hover,
-  .buddypress-wrap.bp-vertical-navs .main-navs.user-nav-tabs ul li:not(.selected) a:focus,
-  .buddypress-wrap.bp-vertical-navs .main-navs.group-nav-tabs ul li:not(.selected) a:hover,
-  .buddypress-wrap.bp-vertical-navs .main-navs.group-nav-tabs ul li:not(.selected) a:focus {
-    background: none;
-  }
-  .buddypress-wrap.bp-vertical-navs .dir-navs.activity-nav-tabs ul li.selected,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.sites-nav-tabs ul li.selected,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.groups-nav-tabs ul li.selected,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.members-nav-tabs ul li.selected,
-  .buddypress-wrap.bp-vertical-navs .main-navs.user-nav-tabs ul li.selected,
-  .buddypress-wrap.bp-vertical-navs .main-navs.group-nav-tabs ul li.selected {
-    background: none;
-    border: 1px solid #d6d6d6;
-    border-right-color: #fff;
-  }
-  .buddypress-wrap.bp-vertical-navs .dir-navs.activity-nav-tabs ul li.selected a,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.sites-nav-tabs ul li.selected a,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.groups-nav-tabs ul li.selected a,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.members-nav-tabs ul li.selected a,
-  .buddypress-wrap.bp-vertical-navs .main-navs.user-nav-tabs ul li.selected a,
-  .buddypress-wrap.bp-vertical-navs .main-navs.group-nav-tabs ul li.selected a {
-    background: none;
-    color: #333;
-    font-weight: 600;
-  }
-  .buddypress-wrap.bp-vertical-navs .dir-navs.activity-nav-tabs ul li.selected a span,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.sites-nav-tabs ul li.selected a span,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.groups-nav-tabs ul li.selected a span,
-  .buddypress-wrap.bp-vertical-navs .dir-navs.members-nav-tabs ul li.selected a span,
-  .buddypress-wrap.bp-vertical-navs .main-navs.user-nav-tabs ul li.selected a span,
-  .buddypress-wrap.bp-vertical-navs .main-navs.group-nav-tabs ul li.selected a span {
-    background: #555;
-    border: 1px solid #d6d6d6;
-    color: #fff;
   }
 }
 
