--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -346,7 +346,7 @@ body.buddypress article.page > .entry-header .entry-title {
     color: #fafafa;
     text-decoration: none;
   }
-  .buddypress-wrap.bp-dir-hori-nav:not(.bp-vertical-navs) nav:not(.tabbed-links) {
+  .buddypress-wrap.bp-dir-hori-nav:not(.bp-vertical-navs) nav {
     border-bottom: 1px solid #eee;
     border-top: 1px solid #eee;
     -webkit-box-shadow: 0 2px 12px 0 #fafafa;
@@ -377,11 +377,6 @@ body.buddypress article.page > .entry-header .entry-title {
   background: none;
 }
 
-.buddypress-wrap .bp-subnavs,
-.buddypress-wrap ul.subnav {
-  width: 100%;
-}
-
 .buddypress-wrap .bp-subnavs {
   margin: 10px 0;
   overflow: hidden;
@@ -396,10 +391,6 @@ body.buddypress article.page > .entry-header .entry-title {
 .buddypress-wrap .bp-subnavs ul li.current :hover {
   background: none;
   color: #333;
-}
-
-.buddypress-wrap ul.subnav {
-  width: auto;
 }
 
 .buddypress-wrap .bp-navs.bp-invites-nav#subnav ul li.last,
@@ -492,12 +483,6 @@ body.buddypress article.page > .entry-header .entry-title {
 @media screen and (min-width: 46.8em) {
   .buddypress-wrap .bp-navs li {
     float: left;
-  }
-  .buddypress-wrap .subnav {
-    float: left;
-  }
-  .buddypress-wrap ul.subnav {
-    width: auto;
   }
   .buddypress-wrap #subsubnav .activity-search {
     float: left;
